# urdl

./: .gitignore  CMakeLists.txt
example/: get1.cpp  get2.cpp  multiget1.cpp  multiget2.cpp
include/urdl/: base_from_member.hpp  http.hpp  istream.hpp  istreambuf.hpp  option_set.hpp  read_stream.hpp  url.hpp
include/urdl/detail/: config.hpp  connect.hpp  coroutine.hpp  file_read_stream.hpp  handshake.hpp  http_read_stream.hpp  parsers.hpp  scoped_ptr.hpp
include/urdl/impl/: http.ipp  istreambuf.ipp  option_set.ipp  url.ipp
test/: http_server.hpp  istream.cpp  istreambuf.cpp  read_stream.cpp  url.cpp
